fixed button overflow in section hero

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,7 @@ a {
 }
 
 .navbar-menu__link {
+  padding: 10px;
   font-weight: bold;
   font-size: 1.8rem;
   line-height: 2.3rem;
@@ -82,6 +83,7 @@ a {
 
 .navbar-menu__link:hover {
   box-shadow: 0px 4px 5px 3px rgba(62, 62, 62, 0.2);
+  border-radius: 15px;
 }
 
 .navbar-social-menu__link:hover {
@@ -106,12 +108,14 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-
-  padding: 36.1rem 0 0;
 }
 
 .hero-content {
-  max-width: 38rem;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+
+  width: max-content;
   margin: 0 auto;
   text-align: center;
 }
@@ -135,14 +139,12 @@ a {
   margin-top: 3.6rem;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .hero__button {
-  width: 18rem;
-  height: 4.8rem;
-  padding: 1.5rem 0;
-
+  padding: 1.5rem;
+  margin: 5px;
   font-family: "Montserrat";
   font-size: 1.6rem;
   line-height: 2rem;
